# graphomotor

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  graphomotor.html  index.html  pyproject.toml  search.js
.github/workflows/: docs.yaml  pypi.yaml  test.yaml
graphomotor/: core.html  features.html  io.html  plot.html  utils.html
graphomotor/core/: cli.html  config.html  models.html  orchestrator.html  spiral_orchestrator.html
graphomotor/features/: distance.html  drawing_error.html  shared_features.html  spiral.html  time.html  trails.html  velocity.html
graphomotor/io/: io_utils.html  reader.html
graphomotor/plot/: feature_plots.html  spiral_plots.html
graphomotor/utils/: center_spiral.html  generate_reference_spiral.html  plotting.html  trails_utils.html
src/graphomotor/: __init__.py
tests/: conftest.py
tests/core/: test_models.py
tests/sample_batch_data/: [5000001]activity_submission_id-spiral_recall1_Dom.csv  [5000001]activity_submission_id-spiral_recall1_NonDom.csv  [5000001]activity_submission_id-spiral_recall2_Dom.csv  [5000001]activity_submission_id-spiral_recall2_NonDom.csv  [5000001]activity_submission_id-spiral_recall3_Dom.csv  [5000001]activity_submission_id-spiral_recall3_NonDom.csv  [5000001]activity_submission_id-spiral_trace1_Dom.csv  [5000001]activity_submission_id-spiral_trace1_NonDom.csv  [5000001]activity_submission_id-spiral_trace2_Dom.csv  [5000001]activity_submission_id-spiral_trace2_NonDom.csv  [5000001]activity_submission_id-spiral_trace3_Dom.csv  [5000001]activity_submission_id-spiral_trace5_Dom.csv  (+66 more)
(+68 files in other folders)
